<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/customerImageView"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="39dp"
        android:src="@mipmap/customer" />

    <TextView
        android:id="@+id/customerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:textColor="@color/bgBottomNavigation"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="65dp"
        android:text="@string/title_customer"
        android:layout_marginTop="120dp" />

    <ImageView
        android:id="@+id/productImageView"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="198dp"
        android:layout_marginLeft="198dp"
        android:layout_marginTop="44dp"
        android:src="@mipmap/product" />

    <TextView
        android:id="@+id/productTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/bgBottomNavigation"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginStart="235dp"
        android:layout_marginLeft="235dp"
        android:text="@string/title_product"
        android:layout_marginTop="120dp" />

    <ImageView
        android:id="@+id/salesmanImageView"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="200dp"
        android:src="@mipmap/salesman" />

    <TextView
        android:id="@+id/salesmanTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/bgBottomNavigation"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:text="@string/title_salesman"
        android:layout_marginTop="280dp" />


    <ImageView
        android:id="@+id/areaImageView"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="200dp"
        android:src="@mipmap/area" />

    <TextView
        android:id="@+id/areaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="235dp"
        android:layout_marginLeft="235dp"
        android:layout_marginTop="280dp"
        android:text="@string/title_area"
        android:textColor="@color/bgBottomNavigation"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/updateImageView"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="400dp"
        android:layout_marginTop="340dp"
        android:src="@mipmap/update_icon" />

    <TextView
        android:id="@+id/updateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="420dp"
        android:text="@string/update_record"
        android:textColor="@color/bgBottomNavigation"
        android:textSize="20dp"
        android:textStyle="bold" />
</RelativeLayout>

